compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__mismatched_list_tail.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2144
expression: "[\"wibble\", ..[1, 2]]"
snapshot_kind: text
---
----- SOURCE CODE
["wibble", ..[1, 2]]

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:14
  │
1 │ ["wibble", ..[1, 2]]
  │              ^^^^^^

All elements in a list must have the same type, but the elements of
this list don't match the type of the elements being prepended to it.

Expected type:

    List(String)

Found type:

    List(Int)
